# mcu-emulator-enviroment-development

./: .clang-format  .gitignore  README.md  autogen-settings.json  dependencies.json  game-engine.code-workspace  game-engine.code-workspace.in  helper.py  meed.code-workspace.in  pyproject.toml  settings.json  system_info.py
app/: CMakeLists.txt  debug.cfg
app/config/: release.cfg  web.cfg
app/src/: main.c
autogen/: binding.py  game-engine.code-workspace  main.py  requirements.txt  settings.json  template_gen.py
autogen/analyze/: parser.py  py_object.py  py_struct.py  py_typedef.py
autogen/models/: binding.py  settings.py  template.py
autogen/templates/: pyi.j2
autogen/templates/pyi/: enum.j2  struct.j2  typedef.j2
autogen/tests/analyze/: test_parse_enum.py  test_parse_function.py  test_parse_struct.py  test_parse_typedef.py
autogen/tests/binding/: test_generate_pyi_enum.py  test_generate_pyi_struct.py  test_generate_pyi_typedef.py
autogen/tests/utils/: __init__.py  test_assert.py
autogen/utils/: __init__.py  cache.py  dependencies_utils.py  system_info.py
cmake/: .gitignore  MEEDConfigure.cmake  MEEDConfigure.cmake.in  MEEDEngineConfig.cmake  MEEDGLFWConfig.cmake  MEEDGlfwConfig.cmake  MEEDpybind11Config.cmake  NTTConfigure.cmake  NTTEngineConfig.cmake  googletestConfig.cmake
config/: __init__.py  args.py  log.py  system_info.py
config/utils/: __init__.py  cpp_utils.py  js_utils.py  python_utils.py  utils.py
editor/: .gitignore  CMakeLists.txt  convert.py  electron-builder.json  main.py  package-lock.json  package.json  requirements.txt  resources.qrc.in
editor/Engine/: __init__.py
editor/app/: index.ts  tsconfig.json
editor/assets/: index.html
editor/assets/uis/: mainwindow.ui
editor/src/: main.c
editor/utils/: file_cache.py  log.py
editor/views/: main_window.py
engine/: .clang-format  .gitignore  CMakeLists.txt
engine/assets/shaders/vulkan/: triangle.vert
engine/config/: release.cfg
engine/examples/: CMakeLists.txt  console.c  file.c  linked_list.c  log.c  memory.c  release_stack.c  render.c  time.c  trace.c  window.c
engine/include/MEEDEngine/: MEEDEngine.h
engine/include/MEEDEngine/core/: core.h
engine/include/MEEDEngine/core/containers/: callback.h  dynamic_array.h  linked_list.h  set.h  stack.h
engine/include/MEEDEngine/core/data/: color.h
engine/include/MEEDEngine/core/log/: handler.h  log.h  logger.h  types.h
engine/include/MEEDEngine/modules/release_stack/: release_stack.h
engine/include/MEEDEngine/modules/render/: pipeline.h  renderer.h  shader.h  vertex_buffer.h
engine/src/core/containers/: dynamic_array.c  linked_list.c  set.c  stack.c
engine/src/core/log/: console_handler.c  logger.c
engine/src/modules/release_stack/: release_stack.c
engine/src/modules/render/: opengl_common.h  pipeline_opengl.c  pipeline_vulkan.c  render_common.c  render_common.h  renderer_opengl.c  renderer_vulkan.c  shader_opengl.c  shader_vulkan.c  vertex_buffer_opengl.c  vertex_buffer_vulkan.c  vertext_buffer_vulkan.c  vulkan_common.h
engine/test/: main.cpp
engine/tests/: main.cpp
engine/tests/core/containers/: container_common.hpp  dynamic_array_test.cpp  linked_list_test.cpp  set_test.cpp  stack_test.cpp
templates/: binding.j2  pyi.j2
webruntime/: .gitignore  test.c
