[project]
name = "mcu-emulator-enviroment-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ntt-autogen",
    "project-manager",
]

[tool.uv.sources]
project-manager = { git = "https://github.com/threezinedine/project-manager.git" }
ntt-autogen = { git = "https://github.com/threezinedine/ntt-autogen.git" }
